--- a/formfiller/package.json
+++ b/formfiller/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
