--- a/formfiller/package.json
+++ b/formfiller/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "mysql": "^2.18.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
