--- a/formfiller/package.json
+++ b/formfiller/package.json
@@ -16,8 +16,8 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mysql": "^2.18.1",
-    "next": "14.0.4",
-    "react": "^18",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-router-dom": "^6.21.3"
   },
