--- a/formfiller/package.json
+++ b/formfiller/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jsonforms/material-renderers": "^3.2.1",
     "@jsonforms/react": "^3.2.1",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
