--- a/formfiller/package.json
+++ b/formfiller/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
